Removed wrap on block controls, added reset implementation and prevent default on button click

--- a/client/app/scripts/liveblog-edit/components/polls/poll-component.scss
+++ b/client/app/scripts/liveblog-edit/components/polls/poll-component.scss
@@ -37,11 +37,11 @@
     cursor: pointer;
 }
 
-.poll_option_add {
+.poll_option_add_button {
    font-size: 12px;
    font-weight: 500;
    color: #8AB6D0; 
-   cursor: pointer;
+   width: fit-content;
 }
 
 .poll_flex_box {
